--- a/src/Metrics_and_Plots.ipynb
+++ b/src/Metrics_and_Plots.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "source": [
     "# F_beta Measure\n",
-    "beta can be calculated by cost of false negative/ cost of false positive."
+    "This measure takes the predicted classes as input.\n",
+    "The hyperparameter beta can be calculated by cost of false negative/ cost of false positive."
    ]
   },
   {
@@ -48,7 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ROC"
+    "# ROC\n",
+    "The ROC is optimistic under imbalanced dataset, hence not a good choice."
    ]
   },
   {
@@ -88,6 +90,38 @@
     "#fpr0, tpr0 = roc(y_score0, y_test)\n",
     "\n",
     "#plt.plot(fpr0, tpr0, color = 'orange', label = 'Logistic Regression', linewidth = 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Precision-Recall Curve\n",
+    "This is an alternative to the ROC, and it focuses on the performance of the classifier on the minority class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "\n",
+    "# Assuming you have the predicted probabilities and true labels\n",
+    "y_scores = [...]  # predicted probabilities\n",
+    "y_true = [...]  # true labels\n",
+    "\n",
+    "# Compute precision, recall, and thresholds\n",
+    "precision, recall, thresholds = precision_recall_curve(y_true, y_scores)\n",
+    "\n",
+    "# Plot the precision-recall curve\n",
+    "plt.plot(recall, precision)\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.title('Precision-Recall Curve')\n",
+    "plt.show()"
    ]
   },
   {
