create recall_at_5pct_fpr function

--- a/src/Metrics_and_Plots.ipynb
+++ b/src/Metrics_and_Plots.ipynb
@@ -128,6 +128,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Recall @5% FPR\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve\n",
+    "import numpy as np\n",
+    "\n",
+    "def recall_at_5pct_fpr(y_true, y_scores):\n",
+    "    # Compute ROC curve\n",
+    "    fpr, tpr, thresholds = roc_curve(y_true, y_scores)\n",
+    "    \n",
+    "    # Find the threshold nearest to the target 5% FPR\n",
+    "    target_fpr = 0.05\n",
+    "    nearest = np.argmin(np.abs(fpr - target_fpr))\n",
+    "    \n",
+    "    # Get the TPR (Recall) at the nearest FPR\n",
+    "    recall_5fpr = tpr[nearest]\n",
+    "    actual_fpr = fpr[nearest]  # Actual FPR at this threshold\n",
+    "\n",
+    "    print(f\"Actual FPR: {actual_fpr*100:.2f}%\") #Print the actual FPR used as this function finds the closest actual FPR to 5%, which might not be exactly 5%.\n",
+    "    return recall_5fpr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Confusion Matrix"
    ]
   },
